examples/test/testpolicy12450.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12450
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value12
          key18: value5
      podSelector:
        matchLabels:
          key33: value36
          key45: value32
